# devops-study-app

./: blah  devcontainer.json  mise.toml  release-please-config.json  test.txt
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml  release-please.yaml  update-gitops.yaml
kubernetes/: setup_cluster_gitops.sh
scripts/: setup.sh
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/backend/: main.py  test.txt
src/demo/: Dockerfile
src/frontend/: Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
