[project]
name = "study-tracker-backend"
version = "0.0.0"
description = "Backend API for tracking study time for DevOps Certs"
readme = "README.md"
authors = [
    { name = "crpruett", email = "crpruett@iu.edu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"
