[project]
name = "study-tracker-backend"
version = "0.0.0"
description = "Backend API for tracking study time for DevOps Certs"
readme = "README.md"
authors = [
    { name = "crpruett", email = "crpruett@iu.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.4",
    "httpx>=0.28.1",
    "ruff>=0.14.8",
    "uvicorn>=0.38.0",
]

[project.scripts]
study-tracker-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"
